# carbon-scribe

corporate-platform/corporate-platform-backend/: .env.example  IMPLEMENTATION.md  README.md
corporate-platform/corporate-platform-backend/src/: app.module.ts  main.ts
corporate-platform/corporate-platform-backend/src/analytics/: analytics.controller.spec.ts
corporate-platform/corporate-platform-backend/src/compliance/: compliance.module.ts
corporate-platform/corporate-platform-backend/src/dev/: dev-bootstrap-seed.service.ts
corporate-platform/corporate-platform-backend/src/health/: health.controller.spec.ts  health.controller.ts  health.module.ts  health.service.spec.ts  health.service.ts
corporate-platform/corporate-platform-backend/src/ipfs/: ipfs.controller.ts  ipfs.module.ts  upload-policy.constants.ts
corporate-platform/corporate-platform-backend/src/multi-tenant/: tenant.service.ts
corporate-platform/corporate-platform-backend/src/retirement/: retirement.module.ts
corporate-platform/corporate-platform-backend/test/: retirement-history.e2e-spec.ts
corporate-platform/corporate-platform-web/: README.md
corporate-platform/corporate-platform-web/src/app/: layout.tsx
project-portal/project-portal-backend/: .env.example  README.md  go.mod
project-portal/project-portal-backend/cmd/api/: main.go
project-portal/project-portal-web/: README.md
stellar-core/compliance-engine/contracts/tax_attribute/: Cargo.toml
stellar-core/compliance-engine/contracts/tax_attribute/src/: lib.rs
stellar-core/compliance-engine/contracts/tax_attribute/tests/: test.rs
(+72 files in other folders)
