[package]
name = "tax_attribute"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[features]
testutils = ["soroban-sdk/testutils"]

[[test]]
name = "test"
path = "tests/test.rs"
required-features = ["testutils"]